--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
+<head>
+<title>Iffah R.</title>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>I design, illustrate, and code towards a kinder world.</h1>
+<p>I'm interested in optimizing product performances through rigorous testing methodologies, sharing my expertise with others, and continuously learning and improving my skills and knowledge. I am eager to collaborate with like-minded professionals, embrace challenges, and drive progress in this dynamic and ever-evolving field.</p>
+
 </body>
 </html>
