Create CSS and JS files

--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
 <title>Iffah R.</title>
 </head>
 <body>
-<h1>I design, illustrate, and code towards a kinder world.</h1>
-<p>I'm interested in optimizing product performances through rigorous testing methodologies, sharing my expertise with others, and continuously learning and improving my skills and knowledge. I am eager to collaborate with like-minded professionals, embrace challenges, and drive progress in this dynamic and ever-evolving field.</p>
-
+    <h1>I design, illustrate, and code towards a kinder world.</h1>
+    <div id="introduction">
+        <div class="smalltext">
+            I'm interested in optimizing product performances through rigorous testing methodologies, sharing my expertise with others, and continuously learning and improving my skills and knowledge. I am eager to collaborate with like-minded professionals, embrace challenges, and drive progress in this dynamic and ever-evolving field.
+        </div>
+    </div>
 </body>
 </html>
