Add styles for landing page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Iffah R.</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Iffah R.</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>I design, illustrate, and code towards a kinder world.</h1>
