--- a/index.html
+++ b/index.html
@@ -7,11 +7,18 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>I design, illustrate, and code towards a kinder world.</h1>
+<!-- <h1>I design, illustrate, and code towards a kinder world.</h1>
     <div id="introduction">
         <div class="smalltext">
-            I'm interested in optimizing product performances through rigorous testing methodologies, sharing my expertise with others, and continuously learning and improving my skills and knowledge. I am eager to collaborate with like-minded professionals, embrace challenges, and drive progress in this dynamic and ever-evolving field.
+            I'm interested in sharing my expertise with others, and continuously learning and improving my skills and knowledge. I am eager to collaborate with like-minded professionals, embrace challenges, and drive progress in this dynamic and ever-evolving field.
         </div>
+    </div> -->
+    <h1>I'm a work in <i>progress.</i></h1>
+    <div class="smalltext">
+        Thank you for paying a visit!
     </div>
+    <picture>
+        <img src="/images/wip-animation.gif" alt="Beatles" style="width:auto;">
+      </picture>
 </body>
 </html>
